# MusicToNotesConverter

./: .gitignore  README.md  plan.txt  pyproject.toml
mtnc/: __init__.py  __main__.py  app.py  branding.py  instruments.py  models.py  music_theory.py  paths.py  settings.py
mtnc/audio/: loader.py
mtnc/export/: exporters.py
mtnc/pipeline/: pitch_detection.py  worker.py
mtnc/playback/: keyboard_player.py  midi_player.py
mtnc/ui/: drop_zone.py  main_window.py  piano_roll_view.py  settings_panel.py  staff_view.py  subtitle_view.py  theme.py  virtual_keyboard.py  waveform_view.py
scripts/: build.py
tests/: test_core.py
