[project]
name = "music-to-notes-converter"
version = "0.2.0"
description = "Audio → transcript, sheet music, and instrument playback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "faster-whisper>=1.0",
    "mido>=1.3",
    "pretty-midi>=0.2",
]

[project.optional-dependencies]
playback = ["pyfluidsynth>=1.3"]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.scripts]
mtnc = "mtnc.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtnc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
